Test overflow fix

--- a/src/components/loading/Loading.scss
+++ b/src/components/loading/Loading.scss
@@ -15,6 +15,7 @@
   background-color: var(--background-color);
   z-index: 100;
   transition: 0.5s ease;
+  overflow: hidden;
 
   svg {
     display:block;
